Fix sql and first test whit docker-compose.yaml